--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+blinker==1.6.2
 click==8.1.3
-Flask==2.2.3
+Flask==2.3.2
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
 greenlet==2.0.2
@@ -7,8 +8,8 @@ importlib-metadata==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-SQLAlchemy==2.0.7
+SQLAlchemy==2.0.19
 typing_extensions==4.5.0
-Werkzeug==2.2.3
+Werkzeug==2.3.6
 WTForms==3.0.1
 zipp==3.15.0
