--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Bootstrap-Flask==2.3.0
 certifi==2023.7.22
 click==8.1.3
 dnspython==2.4.0
+dominate==2.8.0
 email-validator==2.0.0.post2
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
@@ -14,6 +15,7 @@ Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 idna==3.4
@@ -22,10 +24,12 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+packaging==23.1
 python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==2.0.19
 typing_extensions==4.5.0
+visitor==0.1.3
 Werkzeug==2.3.6
 WTForms==3.0.1
 zipp==3.15.0
