--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ bcrypt==4.0.1
 blinker==1.6.2
 Bootstrap-Flask==2.3.0
 certifi==2023.7.22
+cffi==1.16.0
 click==8.1.3
+cryptography==41.0.7
 dnspython==2.4.0
 dominate==2.8.0
 email-validator==2.0.0.post2
@@ -25,6 +27,8 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 packaging==23.1
+pycparser==2.21
+PyMySQL==1.1.0
 python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==2.0.19
